--- a/index.html
+++ b/index.html
@@ -6,22 +6,31 @@
     html, body {
       margin: 0;
       padding: 0;
-      overflow: hidden;
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    #bingo-container {
+      position: relative;
+      width: 90vmin;
+      height: 90vmin;
     }
     #bingo-board {
+      position: absolute;
+      top: 0;
+      left: 0;
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      width: 100vw;
-      height: 100vh;
-      background-image: url('bingo.png');
-      background-size: cover;
-      gap: 0px;
-      position: relative;
+      width: 100%;
+      height: 100%;
+      gap: 0;
+      z-index: 2;
     }
     .bingo-cell {
       width: 100%;
       height: 100%;
-      aspect-ratio: 1;
       pointer-events: none;
     }
     .filled {
@@ -30,41 +39,53 @@
       background-repeat: no-repeat;
       background-position: center;
     }
+    #bingo-bg {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      z-index: 1;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   </style>
 </head>
 <body>
-  <div id="bingo-board">
-    <div class="bingo-cell" id="cell-1"></div>
-<div class="bingo-cell" id="cell-2"></div>
-<div class="bingo-cell" id="cell-3"></div>
-<div class="bingo-cell" id="cell-4"></div>
-<div class="bingo-cell" id="cell-5"></div>
-<div class="bingo-cell" id="cell-6"></div>
-<div class="bingo-cell" id="cell-7"></div>
-<div class="bingo-cell" id="cell-8"></div>
-<div class="bingo-cell" id="cell-9"></div>
-<div class="bingo-cell" id="cell-10"></div>
-<div class="bingo-cell" id="cell-11"></div>
-<div class="bingo-cell" id="cell-12"></div>
-<div class="bingo-cell" id="cell-13"></div>
-<div class="bingo-cell" id="cell-14"></div>
-<div class="bingo-cell" id="cell-15"></div>
-<div class="bingo-cell" id="cell-16"></div>
-<div class="bingo-cell" id="cell-17"></div>
-<div class="bingo-cell" id="cell-18"></div>
-<div class="bingo-cell" id="cell-19"></div>
-<div class="bingo-cell" id="cell-20"></div>
-<div class="bingo-cell" id="cell-21"></div>
-<div class="bingo-cell" id="cell-22"></div>
-<div class="bingo-cell" id="cell-23"></div>
-<div class="bingo-cell" id="cell-24"></div>
-<div class="bingo-cell" id="cell-25"></div>
+  <div id="bingo-container">
+    <img src="bingo.png" id="bingo-bg" alt="Bingo Hintergrund">
+    <div id="bingo-board">
+      <div class="bingo-cell" id="cell-1"></div>
+      <div class="bingo-cell" id="cell-2"></div>
+      <div class="bingo-cell" id="cell-3"></div>
+      <div class="bingo-cell" id="cell-4"></div>
+      <div class="bingo-cell" id="cell-5"></div>
+      <div class="bingo-cell" id="cell-6"></div>
+      <div class="bingo-cell" id="cell-7"></div>
+      <div class="bingo-cell" id="cell-8"></div>
+      <div class="bingo-cell" id="cell-9"></div>
+      <div class="bingo-cell" id="cell-10"></div>
+      <div class="bingo-cell" id="cell-11"></div>
+      <div class="bingo-cell" id="cell-12"></div>
+      <div class="bingo-cell" id="cell-13"></div>
+      <div class="bingo-cell" id="cell-14"></div>
+      <div class="bingo-cell" id="cell-15"></div>
+      <div class="bingo-cell" id="cell-16"></div>
+      <div class="bingo-cell" id="cell-17"></div>
+      <div class="bingo-cell" id="cell-18"></div>
+      <div class="bingo-cell" id="cell-19"></div>
+      <div class="bingo-cell" id="cell-20"></div>
+      <div class="bingo-cell" id="cell-21"></div>
+      <div class="bingo-cell" id="cell-22"></div>
+      <div class="bingo-cell" id="cell-23"></div>
+      <div class="bingo-cell" id="cell-24"></div>
+      <div class="bingo-cell" id="cell-25"></div>
+    </div>
   </div>
 
   <script>
     function markCell(n) {
       const cell = document.getElementById(`cell-${n}`);
-      if (cell) cell.classList.add('filled');
+      if (cell) cell.classList.add("filled");
     }
   </script>
 </body>
