--- a/index.html
+++ b/index.html
@@ -1,90 +1,78 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <title>Bingo Overlay</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      background-color: black;
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      margin: 0; padding: 0; overflow: hidden; background: black;
+      height: 100vh; width: 100vw;
+      display: flex; justify-content: center; align-items: center;
     }
     #bingo-container {
       position: relative;
-      width: 95vmin;
-      height: 95vmin;
-    }
-    #bingo-bg {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      z-index: 1;
-    }
-    #bingo-board {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      z-index: 2;
+      width: 1920px;  /* exakte Breite deines PNG */
+      height: 1920px; /* exakte Höhe deines PNG */
+      background: url('1x Neustart (5).png') no-repeat center/cover;
+      user-select: none;
+      font-family: Arial, sans-serif;
     }
     .bingo-cell {
-      width: 100%;
-      height: 100%;
+      position: absolute;
+      color: white;
+      font-weight: bold;
+      text-shadow: 0 0 4px black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 6px;
+      background-color: rgba(0,0,0,0.4);
+      user-select: none;
       pointer-events: none;
-    }
-    .filled {
-      background-image: url('x.png');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
     }
   </style>
 </head>
 <body>
-  <div id="bingo-container">
-    <img src="bingo.png" id="bingo-bg" alt="Bingo Hintergrund">
-    <div id="bingo-board">
-      <div class="bingo-cell" id="cell-1"></div>
-<div class="bingo-cell" id="cell-2"></div>
-<div class="bingo-cell" id="cell-3"></div>
-<div class="bingo-cell" id="cell-4"></div>
-<div class="bingo-cell" id="cell-5"></div>
-<div class="bingo-cell" id="cell-6"></div>
-<div class="bingo-cell" id="cell-7"></div>
-<div class="bingo-cell" id="cell-8"></div>
-<div class="bingo-cell" id="cell-9"></div>
-<div class="bingo-cell" id="cell-10"></div>
-<div class="bingo-cell" id="cell-11"></div>
-<div class="bingo-cell" id="cell-12"></div>
-<div class="bingo-cell" id="cell-13"></div>
-<div class="bingo-cell" id="cell-14"></div>
-<div class="bingo-cell" id="cell-15"></div>
-<div class="bingo-cell" id="cell-16"></div>
-<div class="bingo-cell" id="cell-17"></div>
-<div class="bingo-cell" id="cell-18"></div>
-<div class="bingo-cell" id="cell-19"></div>
-<div class="bingo-cell" id="cell-20"></div>
-<div class="bingo-cell" id="cell-21"></div>
-<div class="bingo-cell" id="cell-22"></div>
-<div class="bingo-cell" id="cell-23"></div>
-<div class="bingo-cell" id="cell-24"></div>
-<div class="bingo-cell" id="cell-25"></div>
-    </div>
-  </div>
+  <div id="bingo-container"></div>
+
   <script>
-    function markCell(n) {
-      const cell = document.getElementById(`cell-${n}`);
-      if (cell) cell.classList.add("filled");
+    const container = document.getElementById('bingo-container');
+
+    const offsetLeft = 80;
+    const offsetTop = 545;
+    const offsetRight = 71;
+    const offsetBottom = 132;
+
+    const totalWidth = 1920;
+    const totalHeight = 1920;
+
+    const usableWidth = totalWidth - offsetLeft - offsetRight;
+    const usableHeight = totalHeight - offsetTop - offsetBottom;
+
+    const cellWidth = usableWidth / 5;
+    const cellHeight = usableHeight / 5;
+
+    const verticalOffsets = [0, 12, 30, 40, 53, 50];
+    const horizontalOffsets = [0, 4, 1, 0, 1, 0];
+
+    for (let row = 0; row < 5; row++) {
+      for (let col = 0; col < 5; col++) {
+        const cell = document.createElement('div');
+        cell.classList.add('bingo-cell');
+        cell.textContent = row * 5 + col + 1;
+
+        const left = offsetLeft + col * cellWidth + verticalOffsets[col];
+        const right = offsetLeft + (col + 1) * cellWidth + verticalOffsets[col + 1];
+        const top = offsetTop + row * cellHeight + horizontalOffsets[row];
+        const bottom = offsetTop + (row + 1) * cellHeight + horizontalOffsets[row + 1];
+
+        cell.style.left = left + 'px';
+        cell.style.top = top + 'px';
+        cell.style.width = (right - left) + 'px';
+        cell.style.height = (bottom - top) + 'px';
+
+        container.appendChild(cell);
+      }
     }
   </script>
 </body>
