--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       position: relative;
       width: 1920px;  /* exakte Breite deines PNG */
       height: 1920px; /* exakte Höhe deines PNG */
-      background: url('1x Neustart (5).png') no-repeat center/cover;
+      background: url('Bingo.png') no-repeat center/cover;
       user-select: none;
       font-family: Arial, sans-serif;
     }
