--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     }
     #bingo-container {
       position: relative;
-      width: 1920px;  /* exakte Breite deines PNG */
-      height: 1920px; /* exakte Höhe deines PNG */
-      background: url('Bingo.png') no-repeat center/cover;
+      width: 1920px;
+      height: 1920px;
+      background: url('bingo.png') no-repeat center/cover;
       user-select: none;
       font-family: Arial, sans-serif;
     }
