--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
   <title>Bingo Overlay</title>
   <style>
     html, body {
-      margin: 0; padding: 0; overflow: hidden; background: black;
-      height: 100vh; width: 100vw;
-      display: flex; justify-content: center; align-items: center;
+      margin: 0;
+      padding: 0;
+      background: black;
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
     }
+
     #bingo-container {
       position: relative;
+      max-width: 100vw;
+      max-height: 100vh;
       width: 1920px;
       height: 1920px;
-      background: url('bingo.png') no-repeat center/cover;
+      background: url('bingo.png') no-repeat center/contain;
       user-select: none;
       font-family: Arial, sans-serif;
     }
+
     .bingo-cell {
       position: absolute;
       color: white;
