--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     .bingo-cell {
       position: absolute;
-      color: white;
+      color: transparent; /* Zahlen versteckt */
       font-weight: bold;
       text-shadow: 0 0 4px black;
       display: flex;
@@ -49,7 +49,6 @@
   <script>
     const container = document.getElementById('bingo-container');
 
-    // Offsets (grün)
     const offsetLeft = 80;
     const offsetTop = 545;
     const offsetRight = 71;
@@ -67,21 +66,17 @@
       const containerWidth = container.clientWidth;
       const containerHeight = container.clientHeight;
 
-      // Bildseitenverhältnis (breite / höhe)
       const imageRatio = totalWidth / totalHeight;
       const containerRatio = containerWidth / containerHeight;
 
-      // Berechne sichtbare Bildgröße und Padding
       let displayedWidth, displayedHeight;
       let paddingX = 0, paddingY = 0;
 
       if (containerRatio > imageRatio) {
-        // Container ist breiter als Bild -> Padding links/rechts
         displayedHeight = containerHeight;
         displayedWidth = displayedHeight * imageRatio;
         paddingX = (containerWidth - displayedWidth) / 2;
       } else {
-        // Container ist schmaler oder gleich -> Padding oben/unten
         displayedWidth = containerWidth;
         displayedHeight = displayedWidth / imageRatio;
         paddingY = (containerHeight - displayedHeight) / 2;
