--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     window.addEventListener('resize', createCells);
   </script>
 <script>
-  const socket = new WebSocket("wss://DEINE-NGROK-URL-HIER");
+  const socket = new WebSocket("wss://4ff0-109-193-1-96.ngrok-free.app");
 
   socket.addEventListener("message", (event) => {
     try {
