--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
   <script>
     // ✨ WebSocket-Verbindung
-    const WEBSOCKET_URL = "wss://e7ce-109-193-1-96.ngrok-free.app"; // HIER NGROK URL EINTRAGEN
+    const WEBSOCKET_URL = "wss://2e16-109-193-1-96.ngrok-free.app"; // HIER NGROK URL EINTRAGEN
     const socket = new WebSocket(WEBSOCKET_URL);
 
     socket.addEventListener("message", (event) => {
