--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   </script>
 
   <script>
-    const WEBSOCKET_URL = "wss://e7c7-109-193-1-96.ngrok-free.app"; // NGROK WS-LINK
+    const WEBSOCKET_URL = "wss://d8ba-109-193-1-96.ngrok-free.app"; // NGROK WS-LINK
     const socket = new WebSocket(WEBSOCKET_URL);
 
     socket.addEventListener("message", (event) => {
