--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
       const cell = cells[cellNumber - 1];
       if (!cell) return;
 
-      cell.style.backgroundImage = "url('x.png')";
+      // Hier die absolute URL zum X-Bild
+      cell.style.backgroundImage = "url('https://raw.githubusercontent.com/akaNilam/bingo-overlay/main/x.png')";
       cell.style.backgroundSize = "contain";
       cell.style.backgroundRepeat = "no-repeat";
       cell.style.backgroundPosition = "center";
