--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+setInterval(() => {
+  const state = socket.readyState;
+  console.log("🔁 WS Status:", state);
+}, 3000);
+
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
