--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ setInterval(() => {
   </script>
 
   <script>
-    const WEBSOCKET_URL = "wss://0d30-109-193-1-96.ngrok-free.app"; // NGROK WS-LINK
+    const WEBSOCKET_URL = "wss://bingo-overlay.onrender.com/ws";
     const socket = new WebSocket(WEBSOCKET_URL);
 
     socket.addEventListener("message", (event) => {
