--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       for (let cell of cells) {
         cell.style.backgroundImage = 'none';
       }
+      console.log("[RESET] alle X entfernt");
     }
 
     window.addEventListener('message', (event) => {
@@ -119,7 +120,7 @@
         markCell(data.feldId);
       }
       if (data.type === 'resetBingo') {
-        console.log('[RESET]');
+        console.log('[RESET via postMessage]');
         resetMarks();
       }
     });
@@ -132,28 +133,22 @@
     const WEBSOCKET_URL = "wss://bingo-overlay.onrender.com/ws";
     const socket = new WebSocket(WEBSOCKET_URL);
 
-    socket.addEventListener("open", () => {
-      console.log("[WS OPEN] verbunden");
-    });
-
     socket.addEventListener("message", (event) => {
       console.log('[WS MESSAGE]', event.data);
       try {
         const data = JSON.parse(event.data);
-
-        // 🟡 PING ignorieren (nicht anzeigen, nicht posten)
-        if (data.type === 'ping') {
-          console.log('[WS] Ping empfangen (ignoriert)');
-          return;
-        }
 
         if (data.type === 'gift' && data.feldId) {
           window.postMessage({ type: "gift", feldId: data.feldId }, "*");
         }
 
         if (data.type === 'resetBingo') {
-          console.log('[WS] Reset-Befehl empfangen');
-          window.postMessage({ type: "resetBingo" }, "*");
+          console.log('[RESET WS] direkt ausgelöst');
+          resetMarks(); // Direkt im Overlay ausführen!
+        }
+
+        if (data.type === 'ping') {
+          console.log('[WS PING] ignoriert');
         }
 
       } catch (e) {
@@ -161,13 +156,16 @@
       }
     });
 
-    socket.addEventListener("close", () => {
-      console.warn("[WS CLOSED] getrennt");
+    socket.addEventListener("open", () => {
+      console.log("[WS OPEN] verbunden");
     });
 
-    socket.addEventListener("error", (e) => {
-      console.error("[WS ERROR]", e);
+    socket.addEventListener("close", () => {
+      console.warn("[WS CLOSED] getrennt → Seite neu laden");
+      location.reload(); // Auto-Reload bei Disconnect
     });
+
+    socket.addEventListener("error", e => console.error("[WS ERROR]", e));
   </script>
 </body>
 </html>
